--- a/about.html
+++ b/about.html
@@ -104,7 +104,9 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
             <a href="index.html" class="nav-item nav-link active">Home</a>
-            <a href="about.html" class="nav-item nav-link">About  </a>
+            <a href="about.html" class="nav-item nav-link">About</a>   
+            <a href="commodities.html" class="nav-item nav-link">Commodities </a>
+            
             <a href="storage2.html" class="nav-item nav-link">Storage </a>
 
             <a href="transport.html" class="nav-item nav-link">Transport</a>
